Work on fixing images not showing up on heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,7 +66,7 @@ a:hover{
     text-decoration: none;
 }
 .logoContainer{
-    background-image: url('b1.jpg');
+    background-image: url('b1.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -79,6 +79,7 @@ a:hover{
     align-items: center;
     font-family: Helvetica;
 }
+
 #logo{
     background: none;
     display: flex;
